# spotify_smart_playlist_creator

./: README.md  pyproject.toml  report.md
src/spotify_smart_playlist_creator/: app.py  crew.py  main.py  spotify_crew.py
src/spotify_smart_playlist_creator/config/: agents.yaml  tasks.yaml
src/spotify_smart_playlist_creator/templates/: index.html  loading.html  success.html
src/spotify_smart_playlist_creator/tools/: custom_tool.py
